--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.12"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.12",
+    "sequelize": "^6.19.0"
   }
 }
